src/components/navbar/style.css
.nav-right {
  overflow: hidden;
  float: right;
}

.nav-right a {
  float: left;
  font-size: 16px;
  color: black;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  border-radius: 10px;
}

.nav-dropdown {
  border-radius: 10px;
  float: left;
  overflow: hidden;
}

.nav-dropdown .nav-dropbtn {
  color: black;
  border-radius: 10px;
  font-size: 16px;
  border: none;
  outline: none;
  padding: 14px 16px;
  background-color: inherit;
  font-family: inherit;
  margin: 0;
}

.nav-right a:hover,
.nav-dropdown:hover .nav-dropbtn {
  color: black;
  background-color: #f1f1f1;
}

.nav-dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  /* min-width: 106px; */
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.nav-dropdown-content a {
  border-radius: 10px;
  float: none;
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

.nav-dropdown-content a:hover {
  border-radius: 10px;
  /* background-color: #ddd; */
}

.nav-dropdown:hover .nav-dropdown-content {
  border-radius: 10px;
  display: block;
}

.nav-left {
  float: left;
}

.nav-left img {
  margin-top: 0.4rem;
  height: 2.2rem;
}

.nav-bar {
  height: 3rem;
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 32px;
  padding-bottom: 16px;
  border-bottom: 1px solid #ccc;
}

.nav-link {
  font-weight: 500;
  /* width: 100px; */
}

@media (max-width: 420px) {
  .nav-link, .nav-dropdown-content {
    max-width: 60px;
    font-size: 0.9rem;
  }
}

